Fixed some bugs and bad smells 7/1/25 14:43